--- a/app.css
+++ b/app.css
@@ -1,3 +1,42 @@
-#heading {
-    color: #ad0b0b;
+.heading {
+    border: 2px solid gray;
+    display: flex;
+    justify-content: space-between;
+    
+}
+
+.logo {
+    display: flex;
+    width: 100px;
+}
+.nav-items > ul {
+    display: flex;
+    list-style-type: none;
+}
+.nav-items > ul > li {
+    margin: 10px;
+    padding: 10px;
+}
+.res-card {
+    margin: 10px;
+    width: 200px;
+    height: 350px;
+    padding: 10px;
+}
+.res-logo {
+    width: 100%;
+    height: 40%;
+}
+.res-card:hover {
+    border: 1px solid black;
+    cursor: pointer;
+}
+.res-container {
+    display: flex;
+    flex-wrap: wrap;
+    padding: 10px;
+}
+.filter-btn {
+    cursor: pointer;
+    margin: 5px;
 }
